Change formate from excl to csv

--- a/main.ipynb
+++ b/main.ipynb
@@ -248,7 +248,7 @@
    "outputs": [],
    "source": [
     "# df = pd.read_csv('./Coursera_id.csv', index_col=0)\n",
-    "df = pd.read_excel('./data_cleaning.xlsx', index_col=0)\n",
+    "df = pd.read_excel('./data_cleaning.csv', index_col=0)\n",
     "df.head()"
    ]
   },
