--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_excel('data_cleaning.xlsx')"
+    "df.to_csv('data_cleaning.csv')"
    ]
   },
   {
